--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,11 @@ button{
     cursor: pointer;
     outline: 0;
 }
-input,
-select,
-textarea {
-    font-size: 16px !important;
-    height: auto !important;
+@media screen and (max-width: 600px) {
+    input,
+    select,
+    textarea {
+        font-size: 16px !important;
+        height: auto !important;
+    }
 }
