--- a/src/Components/Welcomes/UserInfo/userInfo.css
+++ b/src/Components/Welcomes/UserInfo/userInfo.css
@@ -9,15 +9,18 @@
     margin: 0 0 1rem 0;
     border-radius: 5px;
     border: 1px solid black;
+    font-size: 1.5rem;
 }
 
 @media screen and (min-width: 600px) {
     .username-input {
         width: 70%;
+        font-size: 1.6rem;
     }
 }
 @media screen and (min-width: 900px) {
     .username-input {
         width: 50%;
+        font-size: 1.7rem;
     }
 }
