--- a/src/Pages/Wecome/welcome.css
+++ b/src/Pages/Wecome/welcome.css
@@ -1,17 +1,17 @@
 .welcome-container{
-    min-height: 100vh;
+    min-height: 100dvh;
     width: 100vw;
-    overflow: hidden;
+    max-height: auto;
     background-color: bisque;
     padding: 0.5rem 2rem;
 }
 .welcome-container h2{
     text-align: center;
-    margin: 1rem 0;
+    margin: 2rem 0;
 }
 .welcome-container p{
     text-align: center;
-    margin: 1rem 0;
+    margin: 1rem 0 1.5rem 0;
     font-size: 1.5rem;
 }
 .goOnline-btn{
@@ -19,11 +19,13 @@
     font-size: larger;
 }
 .welcome-container .msgContainer{
-    height: 2rem;
+    height: 4rem;
     width: 100%;
+    padding-top: 1rem;;
 }
 .welcome-container .msg{
     color: red;
+    margin: 0 !important;
 }
 @media screen and (max-width: 600px) {
     .welcome-container{
@@ -33,6 +35,6 @@
         margin: 1rem 0;
     }
     .welcome-container .msgContainer{
-        height: 5rem;
+        height: 7rem;
     }
 }
