--- a/src/Pages/Wecome/welcome.css
+++ b/src/Pages/Wecome/welcome.css
@@ -15,7 +15,7 @@
     font-size: 1.5rem;
 }
 .goOnline-btn{
-    margin: 1rem 0;
+    margin: 1rem 0 0 0;
     font-size: larger;
 }
 .welcome-container .msgContainer{
