--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 button{
     border: 1px solid #000;
     padding: 0.5rem 1rem;
-    margin: 2rem 0;
+    margin: 2rem 0 0 0;
     border-radius: 5px;
     cursor: pointer;
     outline: 0;
