--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   position: relative;
   background-color: red;
+  height: fit-content;
 }
 
 code {
