--- a/src/Components/Welcomes/SelectCompetitor/selectCompetitor.css
+++ b/src/Components/Welcomes/SelectCompetitor/selectCompetitor.css
@@ -1,10 +1,9 @@
 .competitor-container{
-    height: 75%;
+    height: 75dvh;
     width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
     padding: 0.5rem;
-    display: none;
 }
 .non-active{
     display: none;
