--- a/src/Pages/RequestPage/RequestUserPage.css
+++ b/src/Pages/RequestPage/RequestUserPage.css
@@ -3,6 +3,7 @@
     height: calc(100dvh - 4rem);
     position: relative;
     background-color: blue;
+    margin-bottom: 0 !important;
 }
 
 .request-container{
