--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -18,7 +18,7 @@ nav ul{
     top: 3.9rem;
     left:100%;
     width: 100%;
-    height: calc(100vh - 4rem);
+    height: calc(100dvh - 4rem);
     background-color: inherit;
     list-style: none;
     gap: 2rem;
@@ -49,13 +49,11 @@ nav ul img{
         width: 50%;
     }
     nav ul{
-        display: flex;
         flex-direction: row;
-        align-items: center;
         justify-content: end;
         position: static;   
         height: 100%;
         gap: 2rem;
         padding: 0;
-    }   
+    }
 }
